--- a/src/Blog/UserBundle/Resources/config/routing.yml
+++ b/src/Blog/UserBundle/Resources/config/routing.yml
@@ -1,3 +1,23 @@
-blog_user_homepage:
-    path:     /userHome
-    defaults: { _controller: BlogUserBundle:Default:index }
+#blog_user_homepage:
+#    path:     /userHome
+#    defaults: { _controller: BlogUserBundle:Default:index }
+
+#blog_user_login:
+#    path:    /login
+#    defaults: { _controller: BlogUserBundle:Auth:login }
+
+
+# SECURITY
+fos_user_security_login:
+    path: /login
+    defaults: { _controller: FOSUserBundle:Security:login }
+
+
+fos_user_security_check:
+    path: /login/check
+    defaults: { _controller: FOSUserBundle:Security:check }
+
+
+fos_user_security_logout:
+    path: /logout
+    defaults: { _controller: FOSUserBundle:Security:logout }
