--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,34 +1,53 @@
 # To get started with security, check out the documentation:
 # http://symfony.com/doc/current/book/security.html
+#security:
+#    encoders:
+#            FOS\UserBundle\Model\UserInterface: bcrypt
+
+#    role_hierarchy:
+#        ROLE_MODERATOR: ROLE_MODERATOR
+#        ROLE_ADMIN:       ROLE_USER
+#        ROLE_SUPER_ADMIN: ROLE_ADMIN
+#
+#    providers:
+#        fos_userbundle:
+#            id: fos_user.user_provider.username_email
+#
+#    firewalls:
+#        main:
+#            pattern: ^/
+#            anonymous:      true
+#            provider:       main
+#            form_login:
+#                login_path: fos_user_security_login
+#                check_path: fos_user_security_check
+#                provider: fos_userbundle
+#                #csrf_token_generator: security.csrf.token_manager
+#                    # if you are using Symfony < 2.8, use the following config instead:
+#                    # csrf_provider: form.csrf_provider
+#
+#            logout:
+#                path:      fos_user_security_logout
+#                target:    /
+
+
 security:
     encoders:
-            FOS\UserBundle\Model\UserInterface: bcrypt
-
-    role_hierarchy:
-        ROLE_MODERATOR: ROLE_MODERATOR
-        ROLE_ADMIN:       ROLE_USER
-        ROLE_SUPER_ADMIN: ROLE_ADMIN
+        FOS\UserBundle\Model\UserInterface: sha512
 
     providers:
         fos_userbundle:
-            id: fos_user.user_provider.username_email
-
+            id: fos_user.user_provider.username        # fos_user.user_provider.username_email does not seem to work (OAuth-spec related ("username + password") ?)
     firewalls:
-        main:
-            pattern: ^/
-            anonymous:      true
-            provider:       main
-            form_login:
-                login_path: fos_user_security_login
-                check_path: fos_user_security_check
-                provider: fos_userbundle
-                #csrf_token_generator: security.csrf.token_manager
-                    # if you are using Symfony < 2.8, use the following config instead:
-                    # csrf_provider: form.csrf_provider
+        oauth_token:                                   # Everyone can access the access token URL.
+            pattern: ^/oauth/v2/token
+            security: false
+        api:
+            pattern: ^/                                # All URLs are protected
+            fos_oauth: true                            # OAuth2 protected resource
+            stateless: true                            # Do no set session cookies
+            anonymous: false                           # Anonymous access is not allowed
 
-            logout:
-                path:      fos_user_security_logout
-                target:    /
 
     access_control:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
